fix overflow issue with fishy animation and adjust header title color

--- a/styles/index.css
+++ b/styles/index.css
@@ -149,7 +149,7 @@ a:hover {
  */
 
 #header {
-  overflow: auto;
+  overflow: hidden;
   text-align: center;
   position: relative;
   padding-bottom: 1em;
@@ -187,6 +187,10 @@ a:hover {
 #header__subtitle {
   margin: 1rem 0;
   position: relative;
+}
+
+#header__title {
+  color: white;
 }
 
 #header__title::before {
